Remove hei_id parameter in IIA v7 validator
Change-Id: I6bc0f47c4bffab5b28f35edf5f7a3757c70e333e